Opened 4 years ago

Closed 6 months ago

#16705 closed bug (fixed)

THR: Test FAILED - conformance/interfaces/pthread_cancel/5-1.test

Reported by: cocobean Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: System/POSIX Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Test pthread_cancel

It may return an error number of:

[ESRCH] No thread could be found corresponding to that thread ID. It shall not return an error code of [EINTR]

STEPS:

1. Create a thread
2. Wait 'till the thread has ended execution
3. Send a cancel request to the thread (which isn't existing anymore)

NOTE: It should return an error code of [ESRCH], else test fails.

Ref: https://github.com/haiku/open_posix_testsuite/blob/from_haiku_trunk/conformance/interfaces/pthread_cancel/5-1.c

Expected result: Test passed

Actual Result: Test failed. Returned error code other than [ESRCH]

Tested on: Haiku hrev54815 x86 with Open POSIX Test Suite 1.5.2

Change History (1)

comment:1 by waddlesplash, 6 months ago

Keywords: POSIX pthreads pthread_cancel removed
Resolution: fixed
Status: newclosed

Fixed in hrev58065.

Note: See TracTickets for help on using tickets.