pthread: pthread_cancel() on non-existent thread should return ESRCH.

As per POSIX. Fixes #16705.